			CVSps project news

3.11 @ 2013-12-09
  Eliminate dodgy tmpnam() use.
  Make the documentation truthful about --convert-ignores.

3.10 @ 2013-01-20
  Make the behavior of a second -d option match the documentation.

3.9 @ 2013-01-20
  Added -i option for generating incremental fast exports.

3.8 @ 2013-01-13
  Fix buggy generation of the revision-map file (thanks to Chris Rorvick).
  Don't convert .cvsignores by default, we have field reports of collisions.

3.7 @ 2013-01-08
  Bug fix in timezone handling (thanks to Chris Rorvick).
  Major performance gain in the CVS client code (thanks to Sergei Trofimovich).

3.6 @ 2013-01-06
  The third field in an author entry is now interpreted as if it were TZ.

3.5 @ 2013-01-02
  Remove the --test-log option now that cvsps has its own test suite.
  New --reposurgeon option for passing reference-lifting hints to reposurgeon.

3.4 @ 2013-01-01
  Incorporate Heiko Voight's patch solving some time-skew cases.
  The git-tree tests for cvsps are now completely merged into the test suite. 
  Code passes Coverity auditing.

3.3 @ 2012-12-30
  There's a new -A option that does author-name mapping in the expected way.
  There's a new -R option that writes out a revision map.
  cvsps run from within a repository directory will do the right thing.
  A bug that could garble translations of branchy repositories has been fixed.

3.2 @ 2012-12-24
  DEPRECATION WARNING: non-fast-export reporting may be removed in the future.
  The tool now always runs in cvs_direct client mode for better performance.
  Multiple tags per revision will be reported (previously only the latest was).
  Local CVS commands are no longer used.  Caching and -x are gone.
  The ever-malfunctioning -A option has been removed.

3.1 @ 2012-12-22
  If the CVS version is new enough to do commitids, they are used.
  Removed the --bkcvs option, as bitkeeper's kernel CVS export is gone.
  Can now handle versions that use CVSACL.

3.0 @ 2012-12-20