@@ -9,7 +9,7 @@ cvsps - fast export the contents of a CVS repository
     [-h] [-z 'fuzz'] [-g] [-s 'patchset'] [-a 'author']
     [-f 'file'] [-d 'date1' [-d 'date2']] [-l 'text'] [-b 'branch'] [-n]
     [-r 'tag' [-r 'tag']] [-p 'directory'] [-A 'authormap'] [-R 'revmap']
-    [-v] [-t] [--summary-first] [--diff-opts 'option string']
+    [-v] [-t] [--diff-opts 'option string']
     [--debuglvl 'bitmask'] [-Z 'compression'] [--root 'cvsroot']
     [-q] [--fast-export] [--convert-ignores] [--reposurgeon] 
     [-i] [-k] [-T] [-V] ['module-path']
